components/NavigationBar/style/styles.module.css
.navigation_main_container {
    width: 95%;
    margin: auto;
    border-bottom: 1px solid #EBEBEB;
    display: flex;
    align-items: center;
    padding: 12px 0 0 0;
    align-items: baseline;
}

.navigation_section_one {
    text-align: left;
    flex: 0 0 150px;
    color: #302C35;
    font-size: 36px;
    font-weight: 700;
    outline: none;

}

.navigation_section_one:hover {
    color: #302C35;
}

.navigation_section_two {
    flex-grow: 2;
    flex-shrink: 2;
    display: flex;
    justify-content: center;
}

.section_two_button_container {
    display: flex;
    align-items: flex-end;
    text-align: center;
    justify-content: space-evenly;
    width: 65%
}

.navigation_menu_button_active {
    color: #363636;
    border: none;
    background-color: white;
    padding-bottom: 20px;
    outline: none;
    cursor: pointer;
    border-bottom: 5px solid #DD2786;
}

.navigation_menu_button {
    color: #363636;
    border: none;
    background-color: white;
    outline: none;
    cursor: pointer;
    padding-bottom: 25px;
}

.navigation_menu_button:focus,
.navigation_menu_button:active,
.navigation_menu_button_active:focus,
.navigation_menu_button_active:active {
    outline: 0 !important;
}

.navigation_section_three {
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    height: 70%;
    flex: 0 0 250px;


}

.section_three_button_container {
    display: flex;
    width: 60%;
    justify-content: space-evenly;
    align-items: baseline;
}

.section_three_button_container button {
    margin: 0 5px;
    white-space: nowrap;
}

.navigation_section_one_mene_icon {
    width: 0;
    visibility: hidden;
}

.mobile_section_user {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    min-height: 80px;
    margin: 20px 0;
}

.mobile_section_social {
    bottom: 0;
    display: flex;
    /* justify-content: space-evenly; */
    width: 40%;
    position: absolute;
    margin-bottom: 20px;
}

.mobile_section_social img {
    width: 25px;
    margin-right: 10px;
}

.mobile_section_user_details {
    display: flex;
    align-items: center;
}

.mobile_section_user_details_item {
    margin-top: 12px;
    opacity: 1 !important;
    color: #363636;
    cursor: pointer;
}

.mobile_section_user_details_item_disabled {
    margin-top: 15px;
    opacity: 1 !important;
    color: #363636;
    cursor: not-allowed;
}

.mobile_section_user_details_item_unique {
    color: #868686;
}

@media screen and (max-width: 1190px) {
    .section_three_button_container {
        width: 70% !important;
    }
}

@media screen and (max-width: 1020px) {
    .section_two_button_container {
        width: 80%
    }

    .section_three_button_container {
        width: 80% !important;
    }
}

@media screen and (max-width: 870px) {
    .section_two_button_container {
        width: 90%
    }
}

@media screen and (max-width: 820px) {
    .navigation_section_two {
        display: none;
    }

    .navigation_section_three {
        display: none;
    }

    .navigation_section_one_mene_icon {
        font-size: 30px;
        margin-left: 3%;
        position: absolute;
        visibility: visible;
        top: 20px;
    }

    .navigation_main_container {
        padding: 9px 0 7px 0;
    }

    .navigation_section_one {
        text-align: center;
        flex-basis: 100%;
        font-size: 32px;

    }
}

